# HiRE_optimization

./: README.md
HiRE_lib/: CMakeLists.txt  HiRE_interface.F90  NAparams.f90  SAXS_scoring.f90  calcforce.f90  defs_commons.f90  fill_params.f90  finish.f90  hash_int.f90  mod_SAXS.f90  mod_angles.f90  mod_bonds.f90  mod_debyehueckel.F90  mod_dihedrals.f90  mod_excludedV.f90  mod_hbonds.f90  mod_init.f90  mod_nbdef.f90  mod_nonbonded.F90  mod_restraints.f90  mod_stacking(1).f90  mod_stacking.F90  random.f90  setup.f90  titration.f90  utils_io.f90  utils_vec.f90  write_pdb.f90
MD_simulations/: Relaxation_analysis.py  freemin_comparison.ipynb  gaussian_priors.ipynb  readme.md  relaxation_analysis.ipynb  relaxation_names.txt  rmsd.ipynb
MD_simulations/.ipynb_checkpoints/: gaussian_priors-checkpoint.ipynb  relaxation_analysis-checkpoint.ipynb  rmsd-checkpoint.ipynb
MD_simulations/Amber/: angles.pkl  bonds.pkl  dihedrals.pkl  rmsd.npy
MD_simulations/FreeMin/: angles.pkl  bonds.pkl  dihedrals.pkl  rmsd.npy
MD_simulations/FreeMin_1808/: angles.pkl  bonds.pkl  dihedrals.pkl  rmsd.npy
MD_simulations/FreeMin_2008/: angles.pkl  bonds.pkl  dihedrals.pkl  rmsd.npy
MD_simulations/PSGD/: bonds.pkl  (+3 more)
Models/: readme.md
RNAEnergy/: Couplings_to_1_analysis.ipynb  Create_dataset.py  HireOpt.py  HireOpt2.py  Input_stat_analysis.ipynb  LocalEnergy.py  LocalEnergyVct.py  Loss_with_grad.ipynb  NonbondedEnergy.py  Optimizer_scheduler_analysis.ipynb  Plots.ipynb  Prove.ipynb  Result_analysis.ipynb  Torsions analysis.ipynb  VectorizeModel.ipynb  batch_make.py  ciao1.ipynb  create_datasetCSV.py  data_classes.py  energy_check.py  load_data.py  my_script.py  pdb_parser.py  pippo  set_parameters.py  top_parser.py
RunStartUp_Mai21_47/: command_generator_folder.sh  compile_generator.sh  generate_run_dir.sh  place_ions.sh  setup_RNA_Idris_sha.f
Structure_DB_Amber_HiRE/: README
(+9612 files in other folders)
